@@ -274,14 +274,6 @@ void write64LE(std::vector<uint8_t> &buf, uint64_t value);
 /// \brief Calculate a CRC64 across a blob
 uint64_t crc64(uint8_t *message, unsigned len);
 
-/// \brief Convert from a metric to a string
-std::string metricToString(Metric metric);
-
-/// \brief Convert from a string to a metric if possible.
-///
-/// \return The metric if possible, or an empty Option type if not.
-Option<Metric> stringToMetric(std::string metric);
-
 } // end of namespace util
 } // end of namespace mageec
 
